# Theory_of_parallelism

./: CMakeLists.txt  Makefile  README.md
lab1/: main.cpp  report.txt
lab2/sub1/: CMakeLists.txt  README.md  main.c
lab2/sub2/: CMakeLists.txt  README.MD  main.c  readme.txt
lab2/sub3/: CMakeLists.txt  README.md  parallel.cpp  single.cpp
lab3/sub1/: CMakeLists.txt  main.cpp
lab3/sub2/: CMakeLists.txt  main.cpp  test.py
lab4/: main.py
lab5/: main.py
lab6/: Makefile  main.cpp
lab678/: main6.cpp  main7.cpp  main8.cu  main_no.cpp
lab6_/: CMakeLists.txt
lab7/: CMakeLists.txt
